--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,9 +20,21 @@
             margin-top: 0
         }
     </style>
-
+    <script type="text/javascript" src="/scripts/main/site/detail.js"></script>
+    <script type="text/javascript" src="/scripts/main/jquery.js"></script>
+    <script type="text/javascript" src="/scripts/main/base/base.js"></script>
+    <script type="text/javascript" src="/scripts/main/base/util.js"></script>
+    <script type="text/javascript" src="/scripts/main/base/event.js"></script>
+    <script type="text/javascript" src="/scripts/main/util/action.js"></script>
+    <script type="text/javascript" src="/scripts/main/util/business.js"></script>
+    <script type="text/javascript" src="/scripts/main/component/component.js"></script>
+    <script type="text/javascript" src="/scripts/main/component/popup.js"></script>
+    <script type="text/javascript" src="/scripts/main/component/popupAdd.js"></script>
+    <script type="text/javascript" src="/scripts/main/component/popupMsg.js"></script>
+    <script type="text/javascript" src="/scripts/main/site/home.js"></script>
 </head>
 <body class="zhi ">
+
 <div role="navigation" class="zu-top">
     <div class="zg-wrap modal-shifting clearfix" id="zh-top-inner">
         <a href="/" class="zu-top-link-logo" id="zh-top-link-logo" data-za-c="view_home" data-za-a="visit_home"
@@ -31,7 +43,7 @@
 
             <ul th:if="${user==null}" class="topnav-noauth clearfix">
                 <li>
-                    <a style="height: 43px" href="/reglogin">注册/登陆</a>
+                    <a style="height: 43px" href="/reglogin">注册/登录</a>
                 </li>
             </ul>
 
@@ -67,7 +79,7 @@
 
         </div>
 
-        <button th:if="${user!=null}" class="zu-top-add-question" id="zu-top-add-question">提问</button>
+        <button th:if="${user!=null}" class="zu-top-add-question" id="zu-top-add-question" onclick="fClickAdd()">提问</button>
 
         <div role="search" id="zh-top-search" class="zu-top-search">
             <form method="GET" action="/search" id="zh-top-search-form" class="zu-top-search-form">
@@ -292,30 +304,19 @@
 
                 </div>
 
-                <nav aria-label="...">
-                    <ul class="pager">
-                        <li th:if="${page>1}" class="previous"><a th:href="'/?p='+${page-1}" href="#"><span
-                                aria-hidden="true">&larr;</span> Older</a></li>
-                        <li th:if="${end==0}" class="next"><a th:href="'/?p='+${page+1}" href="#">Newer <span
-                                aria-hidden="true">&rarr;</span></a></li>
-                    </ul>
-                </nav>
-                <!--<a href="javascript:;" id="zh-load-more" data-method="next" class="zg-btn-white zg-r3px zu-button-more" style="">更多</a></div>-->
+<!--                <nav aria-label="...">-->
+<!--                    <ul class="pager">-->
+<!--                        <li th:if="${page>1}" class="previous"><a th:href="'/?p='+${page-1}" href="#"><span-->
+<!--                                aria-hidden="true">&larr;</span> Older</a></li>-->
+<!--                        <li th:if="${end==0}" class="next"><a th:href="'/?p='+${page+1}" href="#">Newer <span-->
+<!--                                aria-hidden="true">&rarr;</span></a></li>-->
+<!--                    </ul>-->
+<!--                </nav>-->
+                <a href="javascript:;" id="zh-load-more" data-method="next" class="zg-btn-white zg-r3px zu-button-more" style="">更多</a></div>
             </div>
         </div>
     </div>
-    <script type="text/javascript" src="/scripts/main/site/detail.js"></script>
-    <script type="text/javascript" src="/scripts/main/jquery.js"></script>
-    <script type="text/javascript" src="/scripts/main/base/base.js"></script>
-    <script type="text/javascript" src="/scripts/main/base/util.js"></script>
-    <script type="text/javascript" src="/scripts/main/base/event.js"></script>
-    <script type="text/javascript" src="/scripts/main/util/action.js"></script>
-    <script type="text/javascript" src="/scripts/main/util/business.js"></script>
-    <script type="text/javascript" src="/scripts/main/component/component.js"></script>
-    <script type="text/javascript" src="/scripts/main/component/popup.js"></script>
-    <script type="text/javascript" src="/scripts/main/component/popupAdd.js"></script>
-    <script type="text/javascript" src="/scripts/main/component/popupMsg.js"></script>
-    <script type="text/javascript" src="/scripts/main/site/home.js"></script>
+
 
 </body>
 </html>
