--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -255,7 +255,7 @@
                                     </div>
                                     <div class="expandable entry-body">
                                         <div class="zm-item-vote">
-                                            <a text="4168"
+                                            <a th:text="${vo.get('followCount')}"
                                                class="zm-item-vote-count js-expand js-vote-count" href="javascript:;"
                                                data-bind-votecount="">4168</a></div>
                                         <div class="zm-item-answer-author-info">
