--- a/src/main/resources/templates/feeds.html
+++ b/src/main/resources/templates/feeds.html
@@ -38,7 +38,7 @@
             <a th:if="${user!=null}" th:href="'/user/'+${user.id}" href="" class="zu-top-nav-userinfo " id=":0"
                role="button" aria-haspopup="true" aria-activedescendant="">
                 <span th:text="${user.name}" class="name">$!{user.name}</span>
-                <img th:alt="${user.name}" th:src="${user.head_url}" class="Avatar" src="$!{user.head_url}"
+                <img th:alt="${user.name}" th:src="${user.headUrl}" class="Avatar" src="$!{user.headUrl}"
                      alt="$!{user.name}">
                 <span id="zh-top-nav-new-pm" class="zg-noti-number zu-top-nav-pm-count" style="visibility:hidden"
                       data-count="0">
@@ -246,38 +246,15 @@
                                             [['评论了该问题，'+${#dates.format(vo.createdDate,'yyyy年MM月dd日
                                             HH:mm:ss')}]]
                                         </div>
-                                        <!--<div class="zm-item-vote-info" data-votecount="4168" data-za-module="VoteInfo">-->
-                                                <!--<span class="voters text">-->
-                                                    <!--<a href="#" class="more text">-->
-                                                        <!--<span class="js-voteCount">4168</span>&nbsp;人赞同</a></span>-->
-                                        <!--</div>-->
                                         <div class="zm-item-rich-text expandable js-collapse-body"
                                              data-resourceid="123114" data-action="/answer/content"
                                              data-author-name="李淼" data-entry-url="/question/19857995/answer/13174385">
                                             <div class="zh-summary summary clearfix">
-                                                [[${vo.dataJSON.questionTitle}]]
+                                                <a th:text="${vo.dataJSON.questionTitle}" th:href="'/question/'+${vo.dataJSON.questionId}"></a>
                                             </div>
                                         </div>
                                     </div>
-                                    <!--<div class="feed-meta">-->
-                                        <!--<div class="zm-item-meta answer-actions clearfix js-contentActions">-->
-                                            <!--<div class="zm-meta-panel">-->
-                                                <!--<a data-follow="q:link" class="follow-link zg-follow meta-item"-->
-                                                   <!--href="javascript:;" id="sfb-123114">-->
-                                                    <!--<i class="z-icon-follow"></i>关注问题</a>-->
-                                                <!--<a th:text="${vo.get('question').comment_count}+ '条评论'" href="#"-->
-                                                   <!--name="addcomment"-->
-                                                   <!--class="meta-item toggle-comment js-toggleCommentBox">-->
-                                                    <!--<i class="z-icon-comment"></i>100 条评论</a>-->
 
-
-                                                <!--<button class="meta-item item-collapse js-collapse">-->
-                                                    <!--<i class="z-icon-fold"></i>收起-->
-                                                <!--</button>-->
-                                            <!--</div>-->
-                                        <!--</div>-->
-
-                                    <!--</div>-->
                                 </div>
                             </div>
                         </div>
@@ -293,56 +270,23 @@
                                     <div class="feed-content" data-za-module="AnswerItem">
                                         <meta itemprop="answer-id" content="389034">
                                         <meta itemprop="answer-url-token" content="13174385">
-                                        <!--<h2 class="feed-title">-->
-                                        <!--<a th:text="${vo.questionTitle}"-->
-                                        <!--th:href="'/question/'+${vo.questionId}" class="question_link"-->
-                                        <!--href=""></a></h2>-->
-                                        <!--<div class="feed-question-detail-item">-->
-                                        <!--<div class="question-description-plain zm-editable-content"></div>-->
-                                        <!--</div>-->
+
                                         <div class="expandable entry-body">
-                                            <!--<div class="zm-item-vote">-->
-                                            <!--<a th:text="${vo.get('followCount')}"-->
-                                            <!--class="zm-item-vote-count js-expand js-vote-count" href="javascript:;"-->
-                                            <!--data-bind-votecount="">4168</a></div>-->
                                             <div class="zm-item-answer-author-info">
                                                 <a th:text="${vo.dataJSON.userName}" th:href="'/user/'+${vo.dataJSON.userId}"
                                                    class="author-link" data-tip="p$b$amuro1230" target="_blank" href=""></a>
                                                 [['关注了该问题，'+${#dates.format(vo.createdDate,'yyyy年MM月dd日
                                                 HH:mm:ss')}]]
                                             </div>
-                                            <!--<div class="zm-item-vote-info" data-votecount="4168" data-za-module="VoteInfo">-->
-                                            <!--<span class="voters text">-->
-                                            <!--<a href="#" class="more text">-->
-                                            <!--<span class="js-voteCount">4168</span>&nbsp;人赞同</a></span>-->
-                                            <!--</div>-->
                                             <div class="zm-item-rich-text expandable js-collapse-body"
                                                  data-resourceid="123114" data-action="/answer/content"
                                                  data-author-name="李淼" data-entry-url="/question/19857995/answer/13174385">
                                                 <div class="zh-summary summary clearfix">
-                                                    [[${vo.dataJSON.questionTitle}]]
+                                                    <a th:text="${vo.dataJSON.questionTitle}" th:href="'/question/'+${vo.dataJSON.questionId}"></a>
                                                 </div>
                                             </div>
                                         </div>
-                                        <!--<div class="feed-meta">-->
-                                        <!--<div class="zm-item-meta answer-actions clearfix js-contentActions">-->
-                                        <!--<div class="zm-meta-panel">-->
-                                        <!--<a data-follow="q:link" class="follow-link zg-follow meta-item"-->
-                                        <!--href="javascript:;" id="sfb-123114">-->
-                                        <!--<i class="z-icon-follow"></i>关注问题</a>-->
-                                        <!--<a th:text="${vo.get('question').comment_count}+ '条评论'" href="#"-->
-                                        <!--name="addcomment"-->
-                                        <!--class="meta-item toggle-comment js-toggleCommentBox">-->
-                                        <!--<i class="z-icon-comment"></i>100 条评论</a>-->
 
-
-                                        <!--<button class="meta-item item-collapse js-collapse">-->
-                                        <!--<i class="z-icon-fold"></i>收起-->
-                                        <!--</button>-->
-                                        <!--</div>-->
-                                        <!--</div>-->
-
-                                        <!--</div>-->
                                     </div>
                                 </div>
                             </div>
@@ -358,7 +302,7 @@
                                 aria-hidden="true">&rarr;</span></a></li>
                     </ul>
                 </nav>
-                <!--<a href="javascript:;" id="zh-load-more" data-method="next" class="zg-btn-white zg-r3px zu-button-more" style="">更多</a></div>-->
+                <a href="javascript:;" id="zh-load-more" data-method="next" class="zg-btn-white zg-r3px zu-button-more" style="">更多</a></div>
             </div>
         </div>
     </div>
