--- a/src/main/resources/templates/result.html
+++ b/src/main/resources/templates/result.html
@@ -34,7 +34,7 @@
 
             <a th:if="${user!=null}" th:href="'/user/'+${user.id}" href="" class="zu-top-nav-userinfo " id=":0" role="button" aria-haspopup="true" aria-activedescendant="">
                 <span th:text="${user.name}" class="name">$!{user.name}</span>
-                <img th:alt="${user.name}" th:src="${user.head_url}" class="Avatar" src="$!{user.head_url}" alt="$!{user.name}">
+                <img th:alt="${user.name}" th:src="${user.headUrl}" class="Avatar" src="$!{user.headUrl}" alt="$!{user.name}">
                 <span id="zh-top-nav-new-pm" class="zg-noti-number zu-top-nav-pm-count" style="visibility:hidden" data-count="0">
                     </span>
             </a>
@@ -65,7 +65,7 @@
         <div role="search" id="zh-top-search" class="zu-top-search">
             <form method="GET" action="/search" id="zh-top-search-form" class="zu-top-search-form">
                 <input type="hidden" name="type" value="content">
-                <label for="q" class="hide-text">牛客搜索</label><input type="text" class="zu-top-search-input" id="q" name="q" autocomplete="off" value="" placeholder="搜索你感兴趣的内容..." role="combobox" aria-autocomplete="list">
+                <label for="q" class="hide-text">牛客搜索</label><input type="text" class="zu-top-search-input" id="q" name="q" autocomplete="off" th:value="${keyword}"  placeholder="搜索你感兴趣的内容..." role="combobox" aria-autocomplete="list">
                 <button type="submit" class="zu-top-search-button"><span class="hide-text">搜索</span><span class="sprite-global-icon-magnifier-dark"></span></button>
             </form>
         </div>
@@ -163,11 +163,11 @@
                                     </div>
                                     <div class="entry-body">
                                         <div class="entry-meta">
-                                            <strong class="author-line"><a th:text="${vo.get('user').name}" th:href="'/user/'+${vo.get('user').id}" class="author" href="">username</a>[['，'+${#dates.format(vo.get('question').created_date,'yyyy年MM月dd日 HH:mm:ss')}]]</strong>
+                                            <strong class="author-line"><a th:text="${vo.get('user').name}" th:href="'/user/'+${vo.get('user').id}" class="author" href="">username</a>[['，'+${#dates.format(vo.get('question').createdDate,'yyyy年MM月dd日 HH:mm:ss')}]]</strong>
                                         </div>
                                         <div class="entry-content js-collapse-body">
                                             <div th:text="${vo.get('question').content}" class="summary hidden-expanded" style="">
-                                            content
+
                                             </div>
                                         </div>
                                     </div>
